Fix the harness that produced every number in the last three commits
Five reviews, two of them High, and between them they invalidate the
measurements rather than qualify them.

## The warm-up was asymmetric, and it biased the thing being measured

`KernelSplit` warmed up on a hardcoded `ScalaKernels` *before* the backend was
chosen. So the `scala` arm entered its measured solve fully compiled while the
`vector` arm entered with every widened loop never executed, and every
`kernels.*` site inside `Pdhg` profiled monomorphic on the wrong receiver. Both
effects are charged per call, both land on the operations under comparison, and
both understate the vector backend.

Backend selection now happens first and the warm-up runs through
`Instrumented(inner)`, with a `reset()` that zeroes the counters and keeps the
compiled state. Re-measured at two lanes, the ratio moves from 1.077x to
**1.13x**. The reviews were right about the direction and roughly right about the
size.

It also changes the conclusion the previous commit drew. `axpby`, `scale` and
`dualStep` were handed back to SuperWord because widening them lost by 1.44x,
1.30x and 2.17x -- all measured with the biased warm-up. Measured properly,
widening all six comes out at 1.12x against three at 1.13x: indistinguishable,
not a loss. `VectorKernels` keeps both coverages behind
`alsoWidenAutoVectorised` so the question stays a measurement instead of a
decision baked in on one machine.

## Shares of what

Three reviews asked which quantity the shares were shares of, and the honest
answer needed measuring rather than asserting. The harness now prints wall clock,
time inside `Kernels`, and the ratio: the timed operations are **97%** of the
solve here, so the two are nearly the same number -- but that is a measurement,
not a definition, and it is printed on every run.

The reviews inferred from NOTES' 12.7 s figure for this configuration that
kernels were about half the solve. That figure is not reproducible here: the sam